--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "sass": "^1.19.0",
