--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "vue": "^2.6.10"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "tailwindcss": "^1.1.3",
+    "typescript": "^3.7.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
