--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.15",
     "node-fetch": "^2.6.0",
     "vue": "3.0.0-beta.10"
   },
